GP2-2039 - tag and spacing bug fixes

--- a/core/sass/shared/_base.scss
+++ b/core/sass/shared/_base.scss
@@ -39,10 +39,10 @@ $mobile: 640px;
     color: #fff;
     display: flex;
     flex-direction: row;
-    padding: 15px 30px;
+    padding: 20px 30px;
     margin-bottom: 30px;
 
-    @include mobile {
+    @media (max-width: 960px) {
         flex-direction: column;
         padding: 20px 30px;
     }
@@ -61,6 +61,7 @@ $mobile: 640px;
         background-color: #EB4F4D;
         font-weight: 600;
         margin-right:20px;
+        margin-bottom: 15px;
 
     }
     .content-container {
@@ -72,9 +73,10 @@ $mobile: 640px;
 
         h3 {
             font-size: 24px;
-            line-height: 36px;
+            line-height: 24px;
             font-family: "Overpass", Arial, Helvetica, Verdana;
             font-weight: 600;
+            padding-bottom: 10px;
         }
         p {
             font-family: "Overpass", Arial, Helvetica, Verdana;
@@ -90,7 +92,7 @@ $mobile: 640px;
         justify-content: center;
         margin-left: auto;
 
-        @include mobile {
+        @media (max-width: 960px) {
             margin-left: 0;
             flex-direction: row;
             justify-content: end;
